# sx

./: .gitignore  COPYING  INSTALL  Jenkinsfile  Makefile.am  Makefile.in  NEWS  QUICKSTART  README  UPGRADE  aclocal.m4  configure  configure.ac  gcnew.sql  index.html  support.html  sxfs-faq.html  sxfs-install.html  sxfs.html
client/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
client/man/: sxacl-useradd.1.in  sxacl-userclone.1.in  sxacl-userdel.1.in  sxacl-usergetkey.1.in  sxacl-userlist.1.in  sxacl-usermod.1.in  sxacl-usernewkey.1.in  sxacl-volperm.1.in  sxacl-volshow.1.in  sxacl-whoami.1.in  sxacl.1.in  sxcat.1.in  sxcp.1.in  sxfs.1.in  sxinit.1.in  sxls.1.in  sxmv.1.in  sxreport-client.1.in  sxrev-copy.1.in  sxrev-delete.1.in  sxrev-list.1.in  sxrev.1.in  sxrm.1.in  sxvol-create.1.in  sxvol-filter.1.in  sxvol-modify.1.in  sxvol-remove.1.in  sxvol-rename.1.in  sxvol.1.in
client/src/common/: bcrumbs.h
client/src/filters/aes256/: Makefile.am  Makefile.in  aes256.c  aes256_dummy.c
client/src/filters/attribs/: Makefile.am  Makefile.in  attribs.c
client/src/filters/null/: Makefile.am  Makefile.in  null.c
client/src/filters/undelete/: Makefile.am  Makefile.in  undelete.c
client/src/filters/zcomp/: Makefile.am  Makefile.in  zcomp.c
client/src/sxfs/: cache.c  cache.h  cmdline.c  cmdline.h  common.c  common.h  params.h  sxfs.c  sxfs.ggo
client/src/tools/acl/: cmd_list.c  cmd_list.ggo  cmd_list.h  cmd_main.c  cmd_main.ggo  cmd_main.h  cmd_perm.c  cmd_perm.ggo  cmd_perm.h  cmd_show.c  cmd_show.ggo  cmd_show.h  cmd_useradd.c  cmd_useradd.ggo  cmd_useradd.h  cmd_userclone.c  cmd_userclone.ggo  cmd_userclone.h  cmd_userdel.c  cmd_userdel.ggo  cmd_userdel.h  cmd_usergetkey.c  cmd_usergetkey.ggo  cmd_usergetkey.h  cmd_userlist.c  cmd_userlist.ggo  cmd_userlist.h  cmd_usermod.c  cmd_usermod.ggo  cmd_usermod.h  cmd_usernewkey.c  cmd_usernewkey.ggo  cmd_usernewkey.h  cmd_volperm.c  cmd_volperm.ggo  cmd_volperm.h  cmd_volshow.c  cmd_volshow.ggo  cmd_volshow.h  cmd_whoami.c  (+3 more)
client/src/tools/cat/: cmdline.c  cmdline.h  sxcat.c  sxcat.ggo
client/src/tools/cp/: cmdline.c  cmdline.h  sxcp.c  sxcp.ggo
client/src/tools/init/: cmdline.c  cmdline.h  sxinit.c  sxinit.ggo
client/src/tools/ls/: cmdline.c  cmdline.h  sxls.c  sxls.ggo
client/src/tools/mv/: cmdline.c  cmdline.h  sxmv.c  sxmv.ggo
client/src/tools/rev/: cmd_copy.c  cmd_copy.ggo  cmd_copy.h  cmd_delete.c  cmd_delete.ggo  cmd_delete.h  cmd_list.c  cmd_list.ggo  cmd_list.h  cmd_main.c  cmd_main.ggo  cmd_main.h  sxrev.c
client/src/tools/rm/: cmdline.c  cmdline.h  sxrm.c  sxrm.ggo
client/src/tools/sxreport-client/: cmdline.c  cmdline.h  sxreport-client.c  sxreport-client.ggo
client/src/tools/vol/: cmd_create.c  cmd_create.ggo  cmd_create.h  cmd_filter.c  cmd_filter.ggo  cmd_filter.h  cmd_main.c  cmd_main.ggo  cmd_main.h  cmd_modify.c  cmd_modify.ggo  cmd_modify.h  cmd_remove.c  cmd_remove.ggo  cmd_remove.h  cmd_rename.c  cmd_rename.ggo  cmd_rename.h  sxvol.c
libsx/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  curl-src
libsx/include/: default.h  gnuc.h  sx.h  types.h  version.h
libsx/libltdl/: Makefile.in
libsx/src/: cert.c  cert.h  clustcfg.c  clustcfg.h  cluster.c  cluster.h  curlevents-common.h  curlevents-detail.h  curlevents.c  curlevents.h  fileops.c  fileops.h  filter.c  filter.h  hostlist.c  hostlist.h  jobpoll.c  jobpoll.h  libsx-int.h  libsx.c  misc.c  misc.h  nss.c  openssl.c  sxlog.c  sxproto.c  sxproto.h  sxreport.c  sxreport.h  vcrypto.h  vcryptocurl.h  version.c  volops.c  yajlwrap.c  yajlwrap.h
server/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  todo  valgrind.supp
server/m4/: status.m4
server/man/: sx.fcgi.8.in  sxadm-cluster.8.in  sxadm-node.8.in  sxadm.8.in  sxdump.8.in  sxfcgi.conf.5.in  sxreport-server.8.in  sxserver.8.in  sxsetup.8.in  sxsetup.conf.5.in  sxsim.1.in
server/src/common/: blob.c  blob.h  clstqry.c  clstqry.h  errors.c  errors.h  hashfs.c  hashfs.h  hashop.c  hashop.h  hdist.c  hdist.h  init.c  init.h  intervalset.c  intervalset.h  isaac.c  isaac.h  job_common.h  log.c  log.h  nodes.c  nodes.h  qsort.c  qsort.h  sxdbi.c  sxdbi.h  sxlimits.h  sxproc.c  sxproc.h  utils.c  utils.h  ver.c  vfs_unix_waitsem.c  vfs_unix_waitsem.h
server/src/fcgi/: blockmgr.c  blockmgr.h  cfgfile.c  cfgfile.h  cmdline.c  cmdline.h  fcgi-actions-block.c  fcgi-actions-block.h  fcgi-actions-cluster.c  fcgi-actions-cluster.h  fcgi-actions-file.c  fcgi-actions-file.h  fcgi-actions-job.c  fcgi-actions-job.h  fcgi-actions-node.c  fcgi-actions-node.h  fcgi-actions-user.c  fcgi-actions-user.h  fcgi-actions-volume.c  fcgi-actions-volume.h  fcgi-actions.c  fcgi-actions.h  fcgi-server.c  fcgi-server.h  fcgi-utils.c  fcgi-utils.h  gc.c  gc.h  hbeat.c  hbeat.h  jobmgr.c  jobmgr.h  sx.fcgi_cfg.ggo  sx.fcgi_cmd.ggo
server/src/tools/sxadm/: cmd_cluster.c  cmd_cluster.ggo  cmd_cluster.h  cmd_main.c  cmd_main.ggo  cmd_main.h  (+4 more)
server/sxscripts/: Makefile.am  Makefile.in
server/sxscripts/logrotate.d/: sxserver.in
server/sxscripts/sbin/: sxdump.in  sxserver.in  sxsetup.in
server/sxscripts/sxserver/: sxhttpd.conf.default.in
server/test/: blob-test.c  check_gc.sh  check_main.c  check_main.h  check_misc.c  check_permissions.sh  client-test-cmdline.c  client-test-cmdline.h  client-test.c  client-test.ggo  fcgi-test.pl  hdist-test.c  nodecmds.sh  printerrno.c  ptyrun.sh  randgen.c  rgen.c  rgen.h  run-nginx-test.sh  run-nginx-valgrind.sh  runvg.sh  start-nginx-ssl.sh  start-nginx.sh  sx-errors.sh  sx-ls.sh  testfile.c  valgrind-tests.sh
server/test/gc/: .gitignore  common.sh  run.sh  test.sh
server/test/keys/: cluster1.conf  cluster1.key  cluster1.pem  cluster2cert1.conf  cluster2cert1.key  cluster2cert1.pem  cluster2cert2.ext  cluster2cert2.key  cluster2cert2.pem  cluster2cert3.ext  cluster2cert3.key  cluster2cert3.pem  cluster2cert4.ext  cluster2cert4.key  cluster2cert4.pem  cluster2cert5.conf  cluster2cert5.ext  genkeys.sh  midca.conf  midca.ext  rootca.conf
(+97 files in other folders)
